--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
         AOS.init();
       </script>
   <!--===== HEADER =====-->
-  <header class="header-1" id="header" data-aos="fade-down">
+  <header class="header-1" id="header" data-aos="fade-down" data-aos-delay="300">
     <nav class="nav bd-grid">
       <div class="nav__toggle" id="nav-toggle">
         <i class="bx bxs-grid"></i>
@@ -58,11 +58,11 @@
 
   <main class="l-main">
     <!--===== HOME =====-->
-    <section class="home" id="home" data-aos="fade-up">
+    <section class="home" id="home" data-aos="fade-up"data-aos-delay="300">
       <div class="home__container bd-grid">
         <div class="home__sneaker">
           <div class="home__shape"></div>
-          <img src="https://github.com/bedimcode/responsive-ecommerce-website-sneakers/blob/master/assets/img/imghome.png?raw=true" alt="" class="home__img" data-aos="flip-zoom-in">
+          <img src="https://github.com/bedimcode/responsive-ecommerce-website-sneakers/blob/master/assets/img/imghome.png?raw=true" alt="" class="home__img" data-aos="flip-zoom-in" data-aos-delay="300">
         </div>
 
           <div class="home__data">
@@ -75,7 +75,7 @@
     </section>
 
     <!--===== FEATURED =====-->
-    <section class="featured section" id="featured" data-aos="fade-up">
+    <section class="featured section" id="featured" data-aos="fade-up"data-aos-delay="500">
       <h2 class="section-title">FEATURED</h2>
       <div class="featured__container bd-grid">
         <article class="sneaker">
@@ -105,7 +105,8 @@
     </section>
 
     <!--===== COLLECTION =====-->
-    <section class="collection section" data-aos="fade-up">
+    <section class="collection section" data-aos="fade-up" data-aos-delay="500">
+      <h2 class="section-title">COLLECTION</h2>
       <div class="collection__container bd-grid">
         <div class="collection__card">
           <div class="collection__data">
@@ -131,7 +132,7 @@
     </section>
 
     <!--===== WOMEN SNEAKERS =====-->
-    <section class="women section" id="women" data-aos="fade-up">
+    <section class="women section" id="women" data-aos="fade-up" data-aos-delay="600">
       <h2 class="section-title">WOMEN SNEAKERS</h2>
 
       <div class="women__container bd-grid">
@@ -166,7 +167,7 @@
     </section>
 
     <!--===== OFFER =====-->
-    <section class="offer section" data-aos="fade-up">
+    <section class="offer section" data-aos="slide-left" data-aos-delay="600">
       <div class="offer__container bd-grid">
         <div class="offer__data">
           <h3 class="offer__title">50% OFF</h3>
@@ -179,7 +180,7 @@
     </section>
 
     <!--===== NEW COLLECTION =====-->
-    <section class="new section" id="new" data-aos="fade-up">
+    <section class="new section" id="new" data-aos="fade-up" data-aos-delay="800">
       <h2 class="section-title">NEW COLLECTION</h2>
 
       <div class="new__container bd-grid">
@@ -225,7 +226,7 @@
 
     <!--===== NEWSLETTER =====-->
 
-    <section class="newsletter section" data-aos="fade-up">
+    <section class="newsletter section" data-aos="fade-up" data-aos-delay="1000">
       <div class="newsletter__container bd-grid">
         <div>
           <h3 class="newsletter__title">Subscribe and Get <br> 10% OFF</h3>
@@ -241,7 +242,7 @@
   </main>
 
   <!--===== FOOTER =====-->
-  <footer class="footer section" data-aos="fade-up">
+  <footer class="footer section" data-aos="fade-up" data-aos-delay="600">
     <div class="footer__container bd-grid">
       <div class="footer__box">
         <h3 class="footer__title">Ivy</h3>
@@ -275,7 +276,7 @@
       </div>
     </div>
 
-    <p class="footer__copy"> &#169;2021 praiseShalom. All rights reserved </p>
+    <p class="footer__copy"> &#169;2024 Soles D'amour. All rights reserved </p>
   </footer>
 
   <!--===== MAIN JS =====-->
