lavendar color change

--- a/index.htm
+++ b/index.htm
@@ -226,7 +226,7 @@
 
     <!--===== NEWSLETTER =====-->
 
-    <section class="newsletter section" data-aos="fade-up" data-aos-delay="1000">
+    <section class="newsletter section" data-aos="slide-right" data-aos-delay="1000">
       <div class="newsletter__container bd-grid">
         <div>
           <h3 class="newsletter__title">Subscribe and Get <br> 10% OFF</h3>
