--- a/index.htm
+++ b/index.htm
@@ -38,21 +38,21 @@
         <i class="bx bxs-grid"></i>
       </div>
 
-      <a href="#" class="nav__logo">Soles D'amour</a>
+      <a href="#"><img src="images\logoblacktext.png" style="height: 20vh; width: 30vh;"></a>
 
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-          <li class="nav__item"><a href="#featured" class="nav__link">Featured</a></li>
-          <li class="nav__item"><a href="#women" class="nav__link">Women</a></li>
-          <li class="nav__item"><a href="#new" class="nav__link">New</a></li>
-          <li class="nav__item"><a href="#./shop.html" class="nav__link">Shop</a></li>
+          <li class="nav__item"><a href="index" class="nav__link active">Home</a></li>
+          <li class="nav__item"><a href="#featured" class="nav__link">Our Blog</a></li>
+          <li class="nav__item"><a href="#women" class="nav__link">About Us</a></li>
+          <li class="nav__item"><a href="#new" class="nav__link">Contact</a></li>
+          <li class="nav__item"><a href="store.htm" class="nav__link">Shop</a></li>
         </ul>
       </div>
 
-      <div class="nav__shop">
-        <i class='bx bx-shopping-bag'></i>
-      </div>
+      
+        <a href="#new"><i class='bx bx-shopping-bag' style="float: right;"></i></a>
+      
     </nav>
   </header>
 
@@ -62,7 +62,7 @@
       <div class="home__container bd-grid">
         <div class="home__sneaker">
           <div class="home__shape"></div>
-          <img src="https://github.com/bedimcode/responsive-ecommerce-website-sneakers/blob/master/assets/img/imghome.png?raw=true" alt="" class="home__img" data-aos="flip-zoom-in" data-aos-delay="300">
+          <img src="images\homepageyeezy.png" alt="" class="home__img" data-aos="flip-zoom-in" data-aos-delay="300">
         </div>
 
           <div class="home__data">
@@ -269,10 +269,10 @@
       </div>
 
       <div class="footer__box">
-        <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
-        <a href="#" class="footer__social"><i class='bx bxl-instagram'></i></a>
-        <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
-        <a href="#" class="footer__social"><i class='bx bxl-youtube'></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61555273119269" class="footer__social"><i class='bx bxl-facebook'></i></a>
+        <a href="https://www.instagram.com/solesdamour/" class="footer__social"><i class='bx bxl-instagram'></i></a>
+        <a href="https://www.youtube.com/@solesdamour" class="footer__social"><i class='bx bxl-youtube'></i></a>
+        <!-- <a href="#" class="footer__social"><i class='bx bxl-tiktok'></i></a> -->
       </div>
     </div>
 
