--- a/store.htm
+++ b/store.htm
@@ -58,7 +58,7 @@
           
         <div class = "products">
             <div class = "container">
-                <h2 class = "lg-title">Choose A Design</h2>
+                <h2 class = "lg-title" style="margin-bottom: -40px;">Choose A Design</h2>
                 <p class = "text-light">Discover the Perfect Pair for Every Journey – Where Every Step Shows Your Love</p>
 
                 <div class = "product-items">
