--- a/index.htm
+++ b/index.htm
@@ -254,7 +254,7 @@
         <ul>
           <li><a href="#home" class="footer__link">Home</a></li>
           <li><a href="#featured" class="footer__link">Featured</a></li>
-          <li><a href="#women" class="footer__link">Women</a></li>
+          <li><a href="about.htm" class="footer__link">Women</a></li>
           <li><a href="#new" class="footer__link">New</a></li>
         </ul>
       </div>
