--- a/store.htm
+++ b/store.htm
@@ -44,7 +44,7 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="index.htm" class="nav__link active">Home</a></li>
                     <li class="nav__item"><a href="#featured" class="nav__link">Our Blog</a></li>
-                    <li class="nav__item"><a href="#women" class="nav__link">About Us</a></li>
+                    <li class="nav__item"><a href="about.htm" class="nav__link">About Us</a></li>
                     <li class="nav__item"><a href="#new" class="nav__link">Contact</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Shop</a></li>
                   </ul>
