added all the pages

--- a/blog.htm
+++ b/blog.htm
@@ -42,8 +42,8 @@
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item"><a href="index.htm" class="nav__link active">Home</a></li>
-          <li class="nav__item"><a href="blog.htm" class="nav__link">Our Blog</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">About Us</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Our Blog</a></li>
+          <li class="nav__item"><a href="about.htm" class="nav__link">About Us</a></li>
           <li class="nav__item"><a href="contact.htm" class="nav__link">Contact</a></li>
           <li class="nav__item"><a href="store.htm" class="nav__link">Shop</a></li>
         </ul>
@@ -57,7 +57,8 @@
 <!--BODY-->
 <br><br><br>
 <section>
-    <h1 style="text-align: center; font-size: 35px;">A Little About Us</h1>
+    <h1 style="text-align: center; font-size: 35px;">COMING SOON</h1>
+    <h1 style="text-align: center; font-size: 25px;">Our dedicated team is diligently crafting a platform where you can <br>showcase your designs, fostering a collaborative space for both our community and yours to <br>engage and celebrate creativity together.</h1>
  </section>
 
  <!--INTRO-->
@@ -66,7 +67,7 @@
  </section>
 
   <!--===== FOOTER =====-->
-  <footer class="footer section" data-aos="fade-up" data-aos-delay="400">
+  <footer class="footer section">
     <div class="footer__container bd-grid">
       <div class="footer__box">
         <h3 class="footer__title">Ivy</h3>
