--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
         AOS.init();
       </script>
   <!--===== HEADER =====-->
-  <header class="header-1" id="header" data-aos="fade-down" data-aos-delay="300">
+  <header class="header-1" id="header" data-aos="fade-down" data-aos-delay="100">
     <nav class="nav bd-grid">
       <div class="nav__toggle" id="nav-toggle">
         <i class="bx bxs-grid"></i>
@@ -42,10 +42,10 @@
 
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
-          <li class="nav__item"><a href="index" class="nav__link active">Home</a></li>
-          <li class="nav__item"><a href="#featured" class="nav__link">Our Blog</a></li>
-          <li class="nav__item"><a href="#women" class="nav__link">About Us</a></li>
-          <li class="nav__item"><a href="#new" class="nav__link">Contact</a></li>
+          <li class="nav__item"><a href="#" class="nav__link active">Home</a></li>
+          <li class="nav__item"><a href="blog.htm" class="nav__link">Our Blog</a></li>
+          <li class="nav__item"><a href="about.htm" class="nav__link">About Us</a></li>
+          <li class="nav__item"><a href="contact.htm" class="nav__link">Contact</a></li>
           <li class="nav__item"><a href="store.htm" class="nav__link">Shop</a></li>
         </ul>
       </div>
@@ -69,13 +69,13 @@
             <span class="home__new">New in</span>
             <h1 class="home__title">YEEZY BOOST <br> SPLY - 350</h1>
               <p class="home__description">Explore the new collections of sneekers</p>
-              <a href="#" class="button">Explore Now</a>
+              <a href="store.htm" class="button">Explore Now</a>
           </div>
         </div>
     </section>
 
     <!--===== FEATURED =====-->
-    <section class="featured section" id="featured" data-aos="fade-up"data-aos-delay="500">
+    <section class="featured section" id="featured" data-aos="fade-up"data-aos-delay="300">
       <h2 class="section-title">FEATURED</h2>
       <div class="featured__container bd-grid">
         <article class="sneaker">
@@ -105,7 +105,7 @@
     </section>
 
     <!--===== COLLECTION =====-->
-    <section class="collection section" data-aos="fade-up" data-aos-delay="500">
+    <section class="collection section" data-aos="fade-up" data-aos-delay="300">
       <h2 class="section-title">COLLECTION</h2>
       <div class="collection__container bd-grid">
         <div class="collection__card">
@@ -132,7 +132,7 @@
     </section>
 
     <!--===== WOMEN SNEAKERS =====-->
-    <section class="women section" id="women" data-aos="fade-up" data-aos-delay="600">
+    <section class="women section" id="women" data-aos="fade-up" data-aos-delay="300">
       <h2 class="section-title">WOMEN SNEAKERS</h2>
 
       <div class="women__container bd-grid">
@@ -167,7 +167,7 @@
     </section>
 
     <!--===== OFFER =====-->
-    <section class="offer section" data-aos="slide-left" data-aos-delay="600">
+    <section class="offer section" data-aos="slide-left" data-aos-delay="400">
       <div class="offer__container bd-grid">
         <div class="offer__data">
           <h3 class="offer__title">50% OFF</h3>
@@ -180,7 +180,7 @@
     </section>
 
     <!--===== NEW COLLECTION =====-->
-    <section class="new section" id="new" data-aos="fade-up" data-aos-delay="800">
+    <section class="new section" id="new" data-aos="fade-up" data-aos-delay="400">
       <h2 class="section-title">NEW COLLECTION</h2>
 
       <div class="new__container bd-grid">
@@ -226,7 +226,7 @@
 
     <!--===== NEWSLETTER =====-->
 
-    <section class="newsletter section" data-aos="slide-right" data-aos-delay="1000">
+    <section class="newsletter section" data-aos="slide-right" data-aos-delay="400">
       <div class="newsletter__container bd-grid">
         <div>
           <h3 class="newsletter__title">Subscribe and Get <br> 10% OFF</h3>
@@ -242,7 +242,7 @@
   </main>
 
   <!--===== FOOTER =====-->
-  <footer class="footer section" data-aos="fade-up" data-aos-delay="600">
+  <footer class="footer section" data-aos="fade-up" data-aos-delay="400">
     <div class="footer__container bd-grid">
       <div class="footer__box">
         <h3 class="footer__title">Ivy</h3>
@@ -254,7 +254,7 @@
         <ul>
           <li><a href="#home" class="footer__link">Home</a></li>
           <li><a href="#featured" class="footer__link">Featured</a></li>
-          <li><a href="about.htm" class="footer__link">Women</a></li>
+          <li><a href="#women" class="footer__link">Women</a></li>
           <li><a href="#new" class="footer__link">New</a></li>
         </ul>
       </div>
