--- a/store.htm
+++ b/store.htm
@@ -32,7 +32,7 @@
         <script>
             AOS.init();
           </script>
-          <header class="header-1" id="header" data-aos="fade-down" data-aos-delay="300">
+          <header class="header-1" id="header" data-aos="fade-down" data-aos-delay="100">
             <nav class="nav bd-grid">
               <div class="nav__toggle" id="nav-toggle">
                 <i class="bx bxs-grid"></i>
@@ -43,9 +43,9 @@
               <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="index.htm" class="nav__link active">Home</a></li>
-                    <li class="nav__item"><a href="#featured" class="nav__link">Our Blog</a></li>
+                    <li class="nav__item"><a href="blog.htm" class="nav__link">Our Blog</a></li>
                     <li class="nav__item"><a href="about.htm" class="nav__link">About Us</a></li>
-                    <li class="nav__item"><a href="#new" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="contact.htm" class="nav__link">Contact</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Shop</a></li>
                   </ul>
               </div>
@@ -344,7 +344,7 @@
 
        
         <!--===== FOOTER =====-->
-  <footer class="footer section" data-aos="fade-up" data-aos-delay="600">
+  <footer class="footer section" data-aos="fade-up" data-aos-delay="400">
     <div class="footer__container bd-grid">
       <div class="footer__box">
         <h3 class="footer__title">Ivy</h3>
