--- a/store.htm
+++ b/store.htm
@@ -66,7 +66,7 @@
                     <div class = "product">
                         <div class = "product-content">
                             <div class = "product-img">
-                                <img src = "images\featured1.png" alt = "product image">
+                                <a href="spottedprod.htm"><img src = "images\spotted2.png" alt = "product image"></a>
                             </div>
                             <div class = "product-btns">
                                 <button type = "button" class = "btn-cart"> add to cart
@@ -89,9 +89,9 @@
                                     <span><i class = "far fa-star"></i></span>
                                 </div>
                             </div>
-                            <a href = "#" class = "product-name">mens shoes DN 23XX, new product</a>
-                            <p class = "product-price">$ 150.00</p>
-                            <p class = "product-price">$ 133.00</p>
+                            <a href = "spottedprod.htm" class = "product-name">Spotted Ladybug</a>
+                            <p class = "product-price">$149.99</p>
+                            <p class = "product-price">$112.49</p>
                         </div>
 
                         <div class = "off-info">
