spotted ladybug product description

--- a/spottedprod.htm
+++ b/spottedprod.htm
@@ -82,8 +82,7 @@
         <div class="product-price">
             <span>$112.49</span>
         </div>
-        <br>
-        <p>The preferred choice of a vast range of acclaimed DJs. Punchy, bass-focused sound and high isolation. Sturdy headband and on-ear cushions suitable for live performance</p>
+        <br>Make her heart flutter with our Ladybug Love Slides – an enchanting fusion of comfort and style designed exclusively for the queens of your heart. These delightful slides are more than just footwear; they're a celebration of love, making every moment feel like a romantic getaway.</p>
       </div>
    
       <!-- Product Configuration -->
