--- a/spottedprod.htm
+++ b/spottedprod.htm
@@ -68,7 +68,7 @@
     <div class="left-column">
       <img data-image="black" src="images/spotted2.png" alt="">
       <img data-image="blue" src="images/spotted2.png" alt="">
-      <img data-image="red" class="active" src="images/spotted2.png" alt="">
+      <img data-image="red" class="active" src="images/spotted3.PNG" alt="">
     </div>
    
    
