--- a/index.htm
+++ b/index.htm
@@ -106,10 +106,10 @@
       <div class="featured__container bd-grid">
         <article class="sneaker">
           <div class="sneaker__sale">Sale</div>
-          <img src="https://github.com/bedimcode/responsive-ecommerce-website-sneakers/blob/master/assets/img/featured1.png?raw=true" alt="" class="sneaker__img">
-          <span class="sneaker__name">Nike Jordan</span>
-          <span class="sneaker__preci">$149.99</span>
-          <a href="" class="button-light">Add to Cart <i class='bx bx-right-arrow-alt button-icon'></i></a>
+          <img src="images/spotted4.png" alt="" class="sneaker__img1">
+          <span class="sneaker__name">Spotted Ladybug</span>
+          <span class="sneaker__preci">$129.99</span>
+          <a href="spottedprod.htm" class="button-light">Add to Cart <i class='bx bx-right-arrow-alt button-icon'></i></a>
         </article>
 
         <article class="sneaker">
