--- a/spottedprod.htm
+++ b/spottedprod.htm
@@ -66,9 +66,9 @@
  
     <!-- Left Column / Headphones Image -->
     <div class="left-column">
-      <img data-image="black" src="images/spotted2.png" alt="">
-      <img data-image="blue" src="images/spotted2.png" alt="">
-      <img data-image="red" class="active" src="images/spotted3.PNG" alt="">
+      <img data-image="black" src="images/spotted4.png" alt="">
+      <img data-image="blue" src="images/spotted4.png" alt="">
+      <img data-image="red" class="active" src="images/spotted4.png" alt="">
     </div>
    
    
