--- a/store.htm
+++ b/store.htm
@@ -66,7 +66,7 @@
                     <div class = "product">
                         <div class = "product-content">
                             <div class = "product-img">
-                                <a href="spottedprod.htm"><img src = "images\spotted2.png" alt = "product image"></a>
+                                <a href="spottedprod.htm"><img src = "images/spotted4.png" alt = "product image"></a>
                             </div>
                             <div class = "product-btns">
                                 <button type = "button" class = "btn-cart"> add to cart
@@ -89,7 +89,7 @@
                                     <span><i class = "far fa-star"></i></span>
                                 </div>
                             </div>
-                            <a href = "spottedprod.htm" class = "product-name">Spotted Ladybug</a>
+                            <a href = "images/spotted4.png" class = "product-name">Spotted Ladybug</a>
                             <p class = "product-price">$149.99</p>
                             <p class = "product-price">$112.49</p>
                         </div>
